<resources>
    <string name="app_name">NewsApp</string>
    <string name="top_headlines">Top HeadLines</string>
    <string name="news_sources">News Sources</string>
    <string name="countries">Country</string>
    <string name="languages">Language</string>
    <string name="search">Search</string>
    <string name="error_msg">Something went wrong. Lets Try again</string>
    <string name="try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>